--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -788,8 +788,18 @@ body { background: var(--white); }
   object-fit: cover;
 }
 
-
-
+.sentiment-textarea {
+  width: 100%;
+  padding: 15px;
+  border-radius: 10px;
+  border: 1px solid #ccc;
+  resize: vertical;
+  font-size: 16px;
+  font-family: inherit;
+  transition: border-color 0.3s ease;
+  margin-bottom: 15px;
+  margin-top: 15px;
+  }
 
 
 /*-----------------------------------*\
